[package]
name = "spiderweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ordered-float = "3.0"
no-panic = "0.1.26"
average = "0.14.1"
rand_distr = "0.4.3"
rand = "0.8.5"
rayon = "1.8"
clipboard = "0.5.0"
rand_hc = "0.3"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

